# 0xparc_intro_book_workbook

./: Ch 3 - EdDSA.ipynb  Ch 3 - KZG.ipynb  Ch 3 - Pedersen Commitments.ipynb  Ch 3 - Pedersen Commitments.py  README.md  Two-party_Computation.ipynb  Two-party_Computation.py  pyproject.toml
src/: README.md  ch_2_elgamal.py  ch_2_two_party_computation.ipynb  ch_2_two_party_computation.py  ch_3_2_2_eddsa.ipynb  ch_3_2_2_eddsa.py  ch_3_2_3_pedersen_commitments.ipynb  ch_3_4_kzg.ipynb  ch_5_fhe.ipynb  ch_5_fhe.py  ch_6_oram.ipynb  ch_6_oram.py  directory.ipynb  utils.py
tests/: test_ch_2_elgamal.py  test_ch_6_oram.py
