[tool.poetry]
name = "0xparc-intro-book-workbook"
version = "0.1.0"
description = ""
authors = ["flyingnobita <46126470+flyingnobita@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12.6"
pycryptodome = "^3.21.0"
py-ecc = "^7.0.1"
galois = "^0.4.3"
numpy = "^2.0.2"
pytest = "^8.3.4"
jdc = "^0.0.9"
jupyterlab = "^4.3.4"

[tool.pytest]
pythonpath = "."
